test: Run curl from k8s3 instead of client-from-outside container
Previously, we ran curl from the "client-from-outside" container
in the tests which required sending requests from a third host.

We simulated the third host by running a container
("client-from-outside") in a Docker network which was not managed
by Cilium.

Unfortunately, requests sent to a NodePort service from the container
were handled by bpf_sock.c which prevented from testing the NodePort
implementation in bpf_netdev.c.

Fix it by introducing a "real" host, and run curl from it.

Signed-off-by: Martynas Pumputis <m@lambda.lt>

--- a/test/k8sT/manifests/demo_ds.yaml
+++ b/test/k8sT/manifests/demo_ds.yaml
@@ -13,6 +13,17 @@ spec:
       labels:
         zgroup: testDS
     spec:
+      # Some tests (e.g. DSR) requires to send requests to testds from a host
+      # which does not run any of its pods. We've chosen k8s3 to be such host.
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: "cilium.io/ci-node"
+                operator: NotIn
+                values:
+                - k8s3
       containers:
       - name: web
         image: docker.io/cilium/echoserver:1.10
